remove <center> and change test.html file

--- a/test.html
+++ b/test.html
@@ -3,5 +3,5 @@
  Copyright @ 2016 - 2018 Diego Garcia
 -->
 <div>
-    <p>Text for test the html file block</p>
+    <p>Texto para probar el bloque html file</p>
 </div>
