--- a/test.html
+++ b/test.html
@@ -2,6 +2,6 @@
 <!--
  Copyright @ 2016 - 2018 Diego Garcia
 -->
-<div>
+<div style="border:1px solid black">
     <p>Texto para probar el bloque html file</p>
 </div>
