--- a/test.html
+++ b/test.html
@@ -2,6 +2,6 @@
 <!--
  Copyright @ 2016 - 2019 Diego Garcia (diego@envigo.net)
 -->
-<div style="border:1px solid black">
-    <p>Texto para probar el bloque html file</p>
+<div style="border:1px solid black;float:left;width:100%;">
+    <p>Texto para probar el bloque <b>html file</b></p>
 </div>
